2009-06-19  Vivek Dasmohapatra  <vivek@etla.org>

	* elisp/garak.el:
	(garak-buddy-list-node-widget): prefer: alias > contact alias > name
	(garak-request-add-buddy): implement add buddy/cancel actions
	reaulting from elim-request-add-buddy calls.

2009-06-18  Vivek Dasmohapatra  <vivek@etla.org>

	* handlers/notify_search_callback.c (_h_elim_notify_search_callback): 
	use the cached row data rather than the ephemeral row data which may 
	have been freed by now ( judging by the example in the pidgin source, 
	this is the right approach here ).
	* ui_ops/notify_ui_ops.c (_elim_notify_search): call the standard purple
	`more search rows' function instead of assuming our callback is in place
	and calling it directly. Unlikely thyat we were wrong, but just in case.
	(_elim_notify_search_rows): cache the ephemeral row data we get here
	* elim-rpc.h (_NOTIFY_RESP): search row data is ephemeral: cache it here

2009-06-17  Vivek Dasmohapatra  <vivek@etla.org>

	* elisp/garak.el:
	(garak-callbacks): elim-blist-request-add-buddy handler registered
	(garak-request-add-buddy): handler for above elim call.

2009-06-14  Vivek Dasmohapatra  <vivek@etla.org>

	* handlers/notify_search_callback.c: 
	(_h_elim_notify_search_callback): check gc, row & button are all valid
	(_h_elim_notify_search_callback): get search cache with sid, not call id
	(_h_elim_notify_search_callback): extract row data correctly

	* elisp/garak.el (garak-search-results-buffer): cache args in buffer
	(garak-notify-search-callback): pass search id back in callback

	* elim-rpc.c (check_cb_data): abort if no key passed in

2009-06-13  Vivek Dasmohapatra  <vivek@etla.org>

	* elisp/garak.el: implement search reulst display/action UI.
	* ui_ops/notify_ui_ops.c (_elim_notify_search): pass on the account uid

2009-06-05  Vivek Dasmohapatra  <vivek@etla.org>

	* handlers/notify_search_callback.c: search callbacks (add, join etc)
	(_h_elim_notify_search_callback): handle search result action "buttons"
